# benchmarking_robustness

./: .gitignore  .gitmodules  README.md  setup.py
object_detection/: .gitignore  .pre-commit-config.yaml  adv_attack.py  backbone_training_parameter_changer.py  benchmark_environment.yml  calculate_horeka_utilization.py  change_iterationbased_configs_back_to_iterations.py  check_early_stopping.py  checking_voc_metric.py  checking_vocmetric_voc0712_imp.py  class_num.py  coco_eval_uniqe_finder.py  coco_evaluator_implementation_finder.py  collect_attack_results.py  collect_configs_checkpoints.py  config_error_fixer.py  config_key_finder.py  config_maker.py  config_position_finder.py  config_tester.py  config_trainer.py  config_verifier.py  corruption_val.py  create_3dcc_data.py  create_corrupted_data.py  cron_wrapper_attacks.bash  data_augumentation_checker.py  dataset_stats.py  delete_result_folders.py  environment.yml  epoch_iteration_based_finder.py  error_log_classifier.py  error_log_mover.py  find_coco_dataloader_implementations.py  finder.py  fix_wandb_var.py  harmonise_training_hyperparameters.py  implement_early_stopping.py  json_check.py  key_finder.py  (+51 more)
object_detection/bash_model_submission/: fsaf_swin-b_voc0712.sh  libra_rcnn_convnext-b_voc0712.sh
object_detection/cfg_experiments/: glip_r101_voc0712_captions.py  glip_r50_voc0712_captions.py  voc_metric_atss_r50_voc0712.py
object_detection/configs_to_test/: Detic_swin-b_coco.py  DiffusionDet_r50_coco.py  atss_r101_coco.py  atss_r50_coco.py  cascade_rcnn_r101_coco.py  cascade_rcnn_r50_coco.py  centernet_r101_coco.py  centernet_r50_coco.py  codino_r50_coco.py  conditional_detr_r50_coco.py  configs_r50_coco.py  dab_detr_r50_coco.py  ddod_r50_coco.py  ddq_r50_coco.py  (+37 more)
(+10269 files in other folders)
