[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cospgd>=0.1.3",
    "mmcv==2.2.0",
    "mmdet",
    "mmpretrain>=1.0.0rc8",
    "openmim>=0.3.9",
    "python-dotenv>=1.0.1",
    "setuptools>=75.1.0",
    "submitit>=1.5.2",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "wandb>=0.17","wandb<0.18",
]

[tool.pyright]
exclude = ["3DCommonCorruptions", "artifacts", "data", "DPT", "imagecorruptions", "mmdetection", "models", "models_debug", "models_tmp", "slurm", "wandb", "work_dirs"]


[tool.ruff]
exclude = [
    "mmdetection/**",
    "3DCommonCorruptions/**",
    "imagecorruptions/**",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "mypy>=1.11.2",
    "pudb>=2024.1.2",
    "ruff>=0.6.8",
]

[tool.uv.sources]
mmdet = { path = "mmdetection", editable = true }
